--- a/Int.WepApi/Int.WepApi.csproj
+++ b/Int.WepApi/Int.WepApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,13 +6,31 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Int.Application\Int.Application.csproj" />
+	  <ProjectReference Include="..\Int.Persistence\Int.Persistence.csproj" />
+	</ItemGroup>
 
+	<ItemGroup>
+		<Reference Include="Core.Application">
+			<HintPath>..\..\Core.Package\Core.Application\bin\Debug\net7.0\Core.Application.dll</HintPath>
+		</Reference>
+		<Reference Include="Core.CrossCuttingConcerns">
+			<HintPath>..\..\Core.Package\Core.Application\bin\Debug\net7.0\Core.CrossCuttingConcerns.dll</HintPath>
+		</Reference>
+		<Reference Include="Core.Persistence">
+			<HintPath>..\..\Core.Package\Core.Persistence\bin\Debug\net7.0\Core.Persistence.dll</HintPath>
+		</Reference>
+	</ItemGroup>
+	
 </Project>
