#General  - Project Reference

--- a/Int.Application/Int.Application.csproj
+++ b/Int.Application/Int.Application.csproj
@@ -1,9 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<Reference Include="Core.Application">
+			<HintPath>..\..\Core.Package\Core.Application\bin\Debug\net7.0\Core.Application.dll</HintPath>
+		</Reference>
+		<Reference Include="Core.CrossCuttingConcerns">
+			<HintPath>..\..\Core.Package\Core.Application\bin\Debug\net7.0\Core.CrossCuttingConcerns.dll</HintPath>
+		</Reference>
+		<Reference Include="Core.Persistence">
+			<HintPath>..\..\Core.Package\Core.Persistence\bin\Debug\net7.0\Core.Persistence.dll</HintPath>
+		</Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.6.0" />
+		<PackageReference Include="MediatR" Version="12.1.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Int.Domain\Int.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
