#General - Db Connections & Migrations

--- a/Int.WepApi/appsettings.json
+++ b/Int.WepApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "InitialDb": "Server=(LocalDb)\\MSSQLLocalDB;; Database =Initial; Integrated Security=True;Connect Timeout=60;Multiple Active Result Sets=True;Multi Subnet Failover=True;"
+  },
   "AllowedHosts": "*"
 }
