--- a/Int.Persistence/Int.Persistence.csproj
+++ b/Int.Persistence/Int.Persistence.csproj
@@ -23,5 +23,9 @@
 	    <HintPath>..\..\Core.Package\Core.Persistence\bin\Debug\net7.0\Core.Persistence.dll</HintPath>
 	  </Reference>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
 	
 </Project>
