--- a/Int.WepApi/appsettings.json
+++ b/Int.WepApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "InitialDb": "Server=(LocalDb)\\MSSQLLocalDB;; Database =Initial; Integrated Security=True;Connect Timeout=60;Multiple Active Result Sets=True;Multi Subnet Failover=True;"
+    "InitialDb": "Server=(LocalDb)\\MSSQLLocalDB; Database =Initial; Integrated Security=True;Connect Timeout=60;Multiple Active Result Sets=True;Multi Subnet Failover=True;"
   },
   "AllowedHosts": "*"
 }
