--- a/Int.WepApi/appsettings.json
+++ b/Int.WepApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "ozerugur17@gmail.com",
+    "Issuer": "ozerugur17@gmail.com",
+    "AccessTokenExpiration": 3600,
+    "SecurityKey": "ozerugur17@gmail.com_mykeyozerugur17@gmail.com_mykeyozerugur17@gmail.com_mykey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
