#OrderTransaction - Crud Operations

--- a/Int.Application/Int.Application.csproj
+++ b/Int.Application/Int.Application.csproj
@@ -31,8 +31,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Features\CartItem\Queries\GetList\" />
 	  <Folder Include="Features\CartItem\Queries\Get\" />
+	  <Folder Include="Features\OrderTransaction\Queries\Get\" />
+	  <Folder Include="Features\Product\Queries\" />
 	  <Folder Include="Features\User\Queries\GetList\" />
 	  <Folder Include="Features\User\Queries\Get\" />
 	</ItemGroup>
