--- a/Int.WepApi/appsettings.json
+++ b/Int.WepApi/appsettings.json
@@ -3,7 +3,7 @@
     "Audience": "ozerugur17@gmail.com",
     "Issuer": "ozerugur17@gmail.com",
     "AccessTokenExpiration": 3600,
-    "SecurityKey": "ozerugur17@gmail.com_mykeyozerugur17@gmail.com_mykeyozerugur17@gmail.com_mykey"
+    "SecurityKey": "mypasswordkey_23sxHGDF_3FXZa!Q12icTe_0120242hgh0*2.178232sna3OszUuT"
   },
   "Logging": {
     "LogLevel": {
