--- a/Int.Domain/Int.Domain.csproj
+++ b/Int.Domain/Int.Domain.csproj
@@ -8,7 +8,7 @@
 
 	<ItemGroup>
 		<Reference Include="Core.Persistence">
-			<HintPath>..\..\Core.Package\Core.Persistence\bin\Debug\net7.0\Core.Persistence.dll</HintPath>
+			<HintPath>..\Core.Package\Core.Persistence\bin\Debug\net7.0\Core.Persistence.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 
